--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,28 @@ spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
+
+
+#spring.datasource.url=(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-frankfurt-1.oraclecloud.com))(connect_data=(service_name=g86313e13681d63_picatepl_medium.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+spring.datasource.url=jdbc:oracle:thin:@(description= (retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-frankfurt-1.oraclecloud.com))(connect_data=(service_name=g86313e13681d63_picatepl_medium.adb.oraclecloud.com))(security=(ssl_server_dn_match=yes)))
+#picatepl:1522:41812
+oracle.net.wallet_location=(SOURCE=(METHOD=FILE)(METHOD_DATA=(DIRECTORY=${TNS_ADMIN})))
+spring.datasource.username=ADMIN
+spring.datasource.password=@dmin2023CAT
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database=oracle
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#DB_URL="jdbc:oracle:thin:@picatepl_high?TNS_ADMIN=D:\\D^2\\Firma\\Wallet_picatepl"
+#DRIVER="thin"
+
+#javax.persistence.jdbc.driver = oracle.jdbc.OracleDriver
+#javax.persistence.jdbc.url = jdbc:oracle:thin:@picatepl_high?TNS_ADMIN=D:\\D^2\\Firma\\Wallet_picatepl 
+#org.hibernate.dialect.Dialect = org.hibernate.dialect.Oracle12cDialect
+
+#hibernate.connection.url=jdbc:oracle:thin:@picatepl_high?TNS_ADMIN=D:\\D^2\\Firma\\Wallet_picatepl
+
+#hibernate.transaction.jta.platform=JtaPlatform
