sign up, BusinessUser and Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+#debug=true
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+spring.main.allow-bean-definition-overriding=true
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
