--- a/pom.xml
+++ b/pom.xml
@@ -76,13 +76,23 @@
     		<groupId>javax.servlet</groupId>
    		 	<artifactId>javax.servlet-api</artifactId>
     		<version>4.0.1</version>
-    		<scope>provided</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
-		
+			<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-core</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -111,6 +121,12 @@
 		    <artifactId>junit</artifactId>
 		    <scope>test</scope>
 		</dependency>	
+		<dependency>
+		    <groupId>net.sourceforge.jwebunit</groupId>
+		    <artifactId>jwebunit-htmlunit-plugin</artifactId>
+		    <version>3.3</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
 
     <build>
